# week_by_week

./: Readme.md  example.py  pyproject.toml
week_by_week/: main.py
